package Moves;

import ru.ifmo.se.pokemon.Pokemon;
import ru.ifmo.se.pokemon.SpecialMove;
import ru.ifmo.se.pokemon.Stat;

import ru.ifmo.se.pokemon.Type;

public class LeafStorm extends SpecialMove {
    public LeafStorm(){
        super(Type.GRASS, 130, 90);
    }

    @Override
    protected void applySelfEffects(Pokemon p){
        p.setMod(Stat.ATTACK, -2);
    }

    @Override
    public String describe() {
        return "применяет специальную атаку Leaf Storm";
    }
}
